CONSUMER: Route coordinator fatal errors through reactor